Fixed links z-index so links work

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,7 +73,15 @@ footer {
   width: 100%;
   height: 100%;
   z-index: -1;
-  background-color:white;
+  background-color:white; 
+}
+
+#links {
+   position: fixed;
+  top: 0;
+  left: 0;
+  
+  background-color:rgba(255, 255, 255, 0.05); 
 }
 
 #topImage {
